脚手架工具完成

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <div id="stage"></div>
-  <script data-debug src="/__build/common.js"></script>
-  <script data-debug src="/__build/index.js"></script>
+<div id="root"></div>
+<script data-debug src="/__build/common.js"></script>
+<script data-debug src="/__build/index.js"></script>
 </body>
 
 </html>
