--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="data-spm" content="5176" />
+  <meta name="data-spm" content="5176"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Examples</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <!--<link rel="stylesheet" type="text/css" href="//g.alicdn.com/??aliyun/dblx/0.0.3/index.css">-->
   <!--[if lt IE 9]>
   <script src="http://g.alicdn.com/??aliyun/dblx/0.0.4/es5-shim.min.js,aliyun/dblx/0.0.4/es5-sham.min.js"></script>
   <![endif]-->
-  <script type="text/javascript" src="//g.alicdn.com/??aliyun/dblx/0.0.3/react.min.js,aliyun/dblx/0.0.3/react-dom.min.js,aliyun/dblx/0.0.3/redux.min.js,aliyun/dblx/0.0.3/react-redux.min.js"></script>
+  <script type="text/javascript"
+          src="//g.alicdn.com/??aliyun/dblx/0.0.3/react.min.js,aliyun/dblx/0.0.3/react-dom.min.js,aliyun/dblx/0.0.3/redux.min.js,aliyun/dblx/0.0.3/react-redux.min.js"></script>
 </head>
 
 <body>
