--- a/src/index.html
+++ b/src/index.html
@@ -3,23 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="data-spm" content="5176"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>控制台脚手架系统</title>
+  <title>React-Redux-Router-Webpack脚手架</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link rel="stylesheet" href="http://g.alicdn.com/??aliyun/dblx/0.0.13/index.css">
-  <!--[if lt IE 9]>
-  <script src="http://g.alicdn.com/??aliyun/dblx/0.0.13/es5-shim.min.js,aliyun/dblx/0.0.13/es5-sham.min.js"></script>
+  <!-- Polyfills -->
+  <!--[if lt IE 10]>
+  <script
+    src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
   <![endif]-->
-  <script type="text/javascript"
-          src="//g.alicdn.com/??aliyun/dblx/0.0.13/react.min.js,aliyun/dblx/0.0.13/react-dom.min.js,aliyun/dblx/0.0.13/redux.min.js,aliyun/dblx/0.0.13/react-redux.min.js"></script>
+  <!--[if lte IE 11]>
+  <script src="https://as.alipayobjects.com/g/component/??es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js></script>
+    <![endif]-->
 </head>
-
 <body>
 <div id="root"></div>
-<script data-debug src="/__build/common.js"></script>
-<script data-debug src="/__build/index.js"></script>
+<script src="/index.js"></script>
 </body>
 
 </html>
