--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,8 @@
   <title>React-Redux-Router-Webpack脚手架</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <!-- Polyfills -->
-  <!--[if lt IE 10]>
-  <script
-    src="https://as.alipayobjects.com/g/component/??console-polyfill/0.2.2/index.js,es5-shim/4.5.7/es5-shim.min.js,es5-shim/4.5.7/es5-sham.min.js,es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js,html5shiv/3.7.2/html5shiv.min.js,media-match/2.0.2/media.match.min.js"></script>
-  <![endif]-->
-  <!--[if lte IE 11]>
-  <script src="https://as.alipayobjects.com/g/component/??es6-shim/0.35.1/es6-sham.min.js,es6-shim/0.35.1/es6-shim.min.js></script>
-    <![endif]-->
+  <script src="//cdn.bootcss.com/react/15.4.0/react.min.js"></script>
+  <script src="//cdn.bootcss.com/react/15.4.0/react-dom.min.js"></script>
 </head>
 <body>
 <div id="root"></div>
